# ShadowBot

./: .env  .gitignore  bot.py  pyproject.toml  update.sh
migrations/versions/: 5fb8a9a9cc7f_0_1_0.py
shadow/: exception.py  file_to_url.py  req.py  rule.py
shadow/utils/: arg.py  const.py  depends.py  patch.py  rule.py  send.py
shadow/utils/mcsm/: client.py
src/extra/: extension.py
src/plugins/: _auto_daka.py  alive.py  auto_daka.py  cd_vits.py  file_to_url.py  html_render.py  kindness-lesson.py  kv_cmd.py  online_code.py  passnat.py  ping.py  raw.py  reaction.py  simplemusic.py  sumup.py  tap_left_bracket.py  trss_voice.py  wol.py  zqxy.py
src/plugins/2550505/: __init__.py
src/plugins/WOL/: __init__.py
src/plugins/ddcheck/: __init__.py  data_source.py  info.html.jinja
src/plugins/emojimix/: __init__.py  config.py  data_source.py
src/plugins/fishspeech_tts/: __init__.py  config.py  exception.py  fish_audio_api.py  request_params.py
src/plugins/sumup/: __init__.py  util.py
src/pre/: handle_self.py  only_me.py  patch.py
src/provider/: error_report.py
src/provider/htmlrender/: __init__.py
src/provider/kv/: __init__.py  model.py  utils.py
