[tool.poetry]
name = "shadowbot"
version = "0.1.4"
description = ""
authors = ["eya46 <61458340+eya46@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = { extras = ["fastapi", "httpx", "websockets"], version = "^2.3.3" }

# 适配器
nonebot-adapter-onebot = "^2.4.4"
nonebot-adapter-telegram = "^0.1.0b17"

# 插件
nonebot-plugin-orm = { extras = ["asyncpg", "postgresql"], version = "^0.7.6" }
nonebot-plugin-apscheduler = ">=0.5.0"
nonebot-plugin-alconna = ">=0.52.2"
nonebot-plugin-chatrecorder = "^0.6.0"
nonebot-plugin-localstore = "^0.7.1"
nonebot-plugin-sentry = "^2.0.0"
nonebot-plugin-datastore = "^1.3.0"
nonebot-plugin-wakatime = ">=0.2.4"
nonebot-plugin-htmlrender = ">=0.3.5"
nonebot-plugin-picstatus = "^2.1.2"
nonebot-plugin-nezha = "^0.5.1"

#pydantic-extra-types = "^2.6.0"

# 其它依赖
emoji = "^2.10.1"
jinja2 = "^3.1.3"
bilireq = "^0.2.13"
nb-cli = "^1.4.1"
wakeonlan = "^3.1.0"
pydantic = "~2"
dashscope = "^1.20.4"
playwright = "1.46.0"

# nonebot-plugin-user = { git = "https://github.com/he0119/nonebot-plugin-user.git", branch = "fix/foreignkey" }
fake-useragent = "^1.5.1"
pillow = "9.5"



[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[tool.nonebot]
plugins = ["nonebot_plugin_chatrecorder"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 121
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = [
    "E402", # 导包位置
    "E722", # 空except
    "C901", # 复杂函数名
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
length-sort = true
force-sort-within-sections = true